--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,22 +6,13 @@
     <title>mainscreen</title>
   </head>
   <body>
-    <div>
-      <h1>🍀서성이다🍀</h1>
-      <h3>니들이 카페를 알아?</h3>
-    </div>
-    <div>
-        <a href=''>카테고리로 찾기</a>
-        <a href=''>지도로 찾기</a>
-        <a href=''>추천</a>
-        <a href=''>문의</a>
-    </div>
-    <!--로그인과 회원가입은 오른쪽 끝에 따로--> 
-    <div>
-        <form method='GET' action=''>
-            <input type="text" name='q' placeholder="검색어 입력" value=''>
-            <button type="submit">검색</button>
-        </from>
-    </div>
+    <header>
+      <a href="">카테고리로 찾기</a>
+      <a href="">지도로 찾기</a>
+      <a href="">추천</a>
+      <a href="">문의</a>
+    </header>
+    <main></main>
+    <!--로그인과 회원가입은 오른쪽 끝에 따로-->
   </body>
 </html>
