--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>홈페이지</title>
+    <title>home</title>
+    <link rel="stylesheet" href="../css/home.css">
 </head>
 <body>
-    <h1>안녕하세요! Django 홈페이지입니다.</h1>
+    <object class="header" data="header.html"></object>
+    <object class="header-body" data="header-body.html" type=""></object>
 </body>
 </html>
