--- a/app/templates/home_search.html
+++ b/app/templates/home_search.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="blur"></div>
-    <object data="home.html"></object>
+    <object data="header.html"></object>
     <main>
       <div id="container_who">
         <h3>누구와 함께 하나요?</h3>
@@ -56,6 +56,5 @@
         </div>
       </div>
     </main>
-    <!--로그인과 회원가입은 오른쪽 끝에 따로-->
   </body>
 </html>
