--- a/app/css/header-body.css
+++ b/app/css/header-body.css
@@ -197,7 +197,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 800px;
-  height: 40px;
+  height: 50px;
   font-size: 20px;
   border: 0;
   border-radius: 20px;
@@ -207,18 +207,33 @@
   background-color: rgb(233, 233, 233);
 }
 
-.suggestion-box {
+/* .suggestion-box {
   position: absolute;
-  top: 40px; /* 검색창 바로 아래에 위치 */
+  top: 40px;
   left: 0;
-  width: 100%;
+  width: 90%;
   background: white;
   border: 1px solid #ddd;
   border-radius: 5px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 0px;
+  padding: 15px;
+  margin-left: 65px;
   z-index: 1000;
-  margin: 0;
+} */
+
+.suggestion-box {
+  position: absolute;
+  top: 50px; /* 검색창 아래 */
+  left: 50%; /* 중앙 정렬 */
+  transform: translateX(-50%); /* 가로 기준으로 중앙 배치 */
+  width: 90%; /* 화면이 작을 때는 90% 사용 */
+  max-width: 1700px; /* 너무 넓어지지 않도록 제한 */
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  z-index: 1000;
 }
 
 .hidden {
@@ -226,15 +241,14 @@
 }
 
 #searchSuggestions {
-  margin-top: 25px;
-  bottom: 0;
-  width: 100%;
+  margin-top: 30px;
+  /* margin-bottom: 25px; */
+  bottom: 20px;
 }
 
 #container_who,
-#container_what,
-#container_special {
-  margin-bottom: 50px;
+#container_what {
+  margin-bottom: 40px;
 }
 
 #searchSuggestions h3 {
