--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Seoseong_ida</title>
+    <title>header</title>
     <link rel="stylesheet" href="../css/header.css" />
     <script>
       /*function openPopup() {
