--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>home</title>
+    <title>search</title>
     <link rel="stylesheet" href="../css/home.css" />
   </head>
   <body>
+    <!-- 기존 object 태그 유지 -->
     <object class="header" data="header.html"></object>
-    <object class="header-body" data="home_body.html" type=""></object>
-    <object class="" data="home_activate.html" type=""></object>
+    <object class="header" data="home_body.html"></object>
+    </script>
   </body>
 </html>
