--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <object class="header" data="header.html"></object>
-    <object class="header-body" data="home_body.html" type=""></object>
-    <object class="" data="home_activate.html" type=""></object>
+    <object class="home_search" data="home_search.html" type=""></object>
+    <object class="header-body" data="header-body.html" type=""></object>
   </body>
 </html>
