--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -7,7 +7,7 @@
   <body>
     <!-- 기존 object 태그 유지 -->
     <object class="header" data="header.html"></object>
-    <object class="header" data="home_body.html"></object>
-    </script>
+    <object class="home_search" data="home_search.html"></object>
+    <object class="" data="search-body.html"></object>
   </body>
 </html>
