--- a/app/css/header-body.css
+++ b/app/css/header-body.css
@@ -187,10 +187,19 @@
   width: 400px;
 } */
 
+/*
 .search-container {
-  /* 검색창을 기준으로 팝업이 배치될 수 있도록 부모 컨테이너에 position: relative; 적용*/
+  색창을 기준으로 팝업이 배치될 수 있도록 부모 컨테이너에 position: relative; 적용
   display: flex;
   justify-content: center;
+}
+*/
+
+.search-container {
+  position: relative; /* 부모 요소 기준으로 정렬 */
+  display: flex;
+  justify-content: center;
+  margin-top: 10vh; /* 헤더 아래로 검색창 내리기 */
 }
 
 .search-bar {
@@ -216,6 +225,8 @@
   transform: translateX(-50%); /*가로 기준으로 중앙 배치 */
   width: 90%; /* 화면이 작을 때는 90% 사용 */
   max-width: 1700px; /* 너무 넓어지지 않도록 제한 */
+  max-height: 1700px;
+  height: 70vh;
   background: white;
   border: 1px solid #ddd;
   border-radius: 5px;
@@ -224,8 +235,21 @@
   z-index: 1000;
 }
 
+/*
 .hidden {
   display: none;
+}
+*/
+
+.hidden {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+}
+
+.suggestion-box.show {
+  opacity: 1;
+  visibility: visible;
 }
 
 #searchSuggestions {
