--- a/app/css/home.css
+++ b/app/css/home.css
@@ -17,3 +17,28 @@ body {
   width: 100%;
   height: 100vh;
 }
+
+.home_search {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.home_search object {
+  width: 80%;
+  height: 80%;
+  background: white;
+  border-radius: 10px;
+  border: none;
+  opacity: 0; /* 처음에는 투명하게 */
+  transition: opacity 0.3s ease-in-out;
+}
+
+.home_search.active object {
+  opacity: 1; /* 클릭하면 보이게 변경 */
+}
