--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -23,19 +23,19 @@
   <body>
     <section class="header">
       <div class="left-section">
-        <div class="title">서성이다</div>
-        <div class="sub-title">니들이 카페를 알아?</div>
+        <div class="title" onclick="location.href='home.html'">서성이다</div>
+        <div class="sub-title" onclick="location.href='home.html'">니들이 카페를 알아?</div>
       </div>
       <div class="middle-section">
-        <div class="map">지도로 찾기</div>
-        <div class="menu">메뉴로 찾기</div>
-        <div class="category">카테고리로 찾기</div>
-        <div class="keyword">아무거나</div>
+        <div class="map" onclick="location.href='findbymap.html'">지도로 찾기</div>
+        <div class="menu" onclick="location.href='menu.html'">메뉴로 찾기</div>
+        <div class="category" onclick="location.href='category.html'">카테고리로 찾기</div>
+        <div class="keyword" onclick="location.href='index.html'">아무거나</div>
       </div>
       <div class="right-section">
-        <div class="FAQ">문의</div>
-        <div class="login">로그인</div>
-        <div class="createaccount">회원가입</div>
+        <div class="FAQ" onclick="location.href='faq.html'">문의</div>
+        <div class="login" onclick="location.href='login.html'">로그인</div>
+        <div class="createaccount" onclick="location.href='index.html'">회원가입</div>
       </div>
     </section>
   </body>
