--- a/app/templates/findbymap.html
+++ b/app/templates/findbymap.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>findbymap</title>
-    <link rel="stylesheet" href="findbymap.css" />
-  </head>
-  <body>
-    <div id="map"></div>
-    <script type="text/javascript" src=""></script>
-    <script>
-      var container = document.getElementById('map');
-      var options = {
-        center: new kakao.maps.LatLng(33.450701, 126.570667),
-        level: 3,
-      };
-
-      var map = new kakao.maps.Map(container, options);
-    </script>
-    <!-- <div class="sidebar"> -->
-    <!-- <div class="find-mat">
+    <head>
+        <meta charset="utf-8"/>
+        <title>findbymap</title>
+        <link rel="stylesheet" href="findbymap.css">
+    </head>
+    <body>
+        <div id="map"></div>
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fd9a6f2bdc74720bc9555e24a3af8ea2"></script>
+        <script>
+            var container = document.getElementById('map');
+            var options = {
+                center: new kakao.maps.LatLng(33.450701, 126.570667),
+                level: 3
+            };
+    
+            var map = new kakao.maps.Map(container, options);
+        </script>
+        <!-- <div class="sidebar"> -->
+            <!-- <div class="find-mat">
                 맛도리를 찾아보자
             </div> -->
-    <div class="info-layers">
-      <div class="info-box">
-        <img src="intro-to-html/chris.jpeg" alt="" style="width: 300px; height: 300px" />
-        <div>가게이름</div>
-        <div>가게 설명 or 카테고리</div>
-      </div>
-      <div class="info-box">
-        <img src="intro-to-html/chris.jpeg" alt="" style="width: 300px; height: 300px" />
-        <div>something</div>
-        <div>something123</div>
-      </div>
-      <div class="info-box">
-        <img src="intro-to-html/chris.jpeg" alt="" style="width: 300px; height: 300px" />
-        <div>가게이름</div>
-        <div>가게 설명 or 카테고리</div>
-      </div>
-      <div class="info-box">
-        <img src="intro-to-html/chris.jpeg" alt="" style="width: 300px; height: 300px" />
-        <div>something</div>
-        <div>something123</div>
-      </div>
-    </div>
-    <!-- </div> -->
-  </body>
+            <div class="info-layers">
+                <div class="info-box">
+                    <img src="intro-to-html/chris.jpeg" alt="" style="width: 300px; height: 300px;">
+                    <div>가게이름</div>
+                    <div>가게 설명 or 카테고리</div>
+                </div>
+                <div class="info-box">
+                    <img src="intro-to-html/chris.jpeg" alt="" style="width: 300px; height: 300px;">
+                    <div>something</div>
+                    <div>something123</div>
+                </div>
+                <div class="info-box">
+                    <img src="intro-to-html/chris.jpeg" alt="" style="width: 300px; height: 300px;">
+                    <div>가게이름</div>
+                    <div>가게 설명 or 카테고리</div>
+                </div>
+                <div class="info-box">
+                    <img src="intro-to-html/chris.jpeg" alt="" style="width: 300px; height: 300px;">
+                    <div>something</div>
+                    <div>something123</div>
+                </div>
+            </div>
+        <!-- </div> -->
+    </body>
 </html>
