--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -1,68 +1,74 @@
 .header {
   display: flex;
   flex-direction: row;
-  align-items: center; /* 세로 중앙 정렬 */
-  justify-content: space-between;
-  width: 100%;
-  padding: 10px 20px;
+  /* margin-bottom: 100px; */
 }
-
-/* 왼쪽 섹션 (제목 부분) */
 .left-section {
   display: flex;
-  flex-direction: column; /* 세로 정렬 유지 */
-  align-items: flex-start; /* 왼쪽 정렬 */
+  flex-direction: column;
+  width: 100px;
+  align-items: center;
   justify-content: center;
-  min-width: 150px; /* 가변적인 너비 유지 */
-  margin-right: 20px; /* 중간 섹션과 간격 추가 */
+  margin-right: 10px;
 }
-
-/* 가운데 섹션 (메뉴) */
 .middle-section {
   flex: 1;
   display: flex;
   align-items: center;
-  justify-content: center; /* 가운데 정렬 */
   height: 50px;
   margin: 0;
   padding-left: 20px;
+  justify-content: left;
 }
-
-/* 오른쪽 섹션 (로그인, 회원가입) */
 .right-section {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
   height: 50px;
+  justify-content: space-between;
+  right: 0;
 }
-
-/* 제목과 부제목 스타일 */
-.title {
-  font-size: 24px; /* 크기 조정 */
-  font-weight: bold;
-  margin-bottom: 4px; /* 부제목과 간격 추가 */
-}
-
-.sub-title {
-  font-size: 12px;
-  color: gray;
-}
-
-/* 네비게이션 메뉴 스타일 */
 .map,
 .menu,
 .category,
 .keyword {
-  padding: 10px;
-  margin: 0 10px;
+  position: relative;
+  padding: 20px;
+  margin: 0;
 }
-
 .FAQ,
 .login,
 .createaccount {
+  position: relative;
   padding: 5px;
-  margin: 0 5px;
+  margin: 0;
 }
+
+.title {
+  font-size: 20px;
+}
+.sub-title {
+  font-size: 10px;
+}
+/*.middle-bar {
+  display: flex;
+}*/
+.pop-up {
+  opacity: 0%;
+}
+
+/*.search-container {
+  position: relative;
+  width: 400px;
+}*/
+
+/*.search-bar {
+  width: 100%;
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+  font-size: 16px;
+}*/
 
 /* 링크 스타일 */
 a {
