--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>home</title>
-    {% load static %}
+    {% load static %} {% comment %}
     <link rel="stylesheet" href="{% static 'css/home.css' %}" />
+    {% endcomment %}
     <link rel="stylesheet" href="{% static 'css/header.css' %}" />
     <link rel="stylesheet" href="{% static 'css/header-body.css' %}" />
   </head>
