--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>home</title>
-    {% load static %} {% comment %}
-    <link rel="stylesheet" href="{% static 'css/home.css' %}" />
-    {% endcomment %}
-    <link rel="stylesheet" href="{% static 'css/header.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/header-body.css' %}" />
-  </head>
-  <body>
-    {% include 'header.html'%} {% include 'home_search.html' %} {% include 'header-body.html' %}
-  </body>
-</html>
+{% extends "reference.html" %} {% block search %}
+{% include "partials/home_search.html" %}
+{% endblock %}
+{% block activate%}
+<main class = 'main-container'>
+    <div class='wrapper'>
+        <div class='carousel'>
+        	<div class='slide'>
+                <img src="../static/css/image/KakaoTalk_20221007_222113499.jpg" frameborder="0" allowfullscreen></img>
+            </div>
+            <div class='slide'>
+                <img src="/intro-to-html/123.png" frameborder="0" allowfullscreen></img>
+            </div>
+            <div class="slide">
+                <img src="/intro-to-html/112.jpg" frameborder="0" allowfullscreen></img>
+            </div>
+        </div>
+    </div>      
+</main>
+{% endblock %} 
