--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,10 +9,10 @@
                 <img src="../static/css/image/KakaoTalk_20221007_222113499.jpg" frameborder="0" allowfullscreen></img>
             </div>
             <div class='slide'>
-                <img src="/intro-to-html/123.png" frameborder="0" allowfullscreen></img>
+                <img src="../static/css/image/KakaoTalk_20221007_222113499.jpg" frameborder="0" allowfullscreen></img>
             </div>
             <div class="slide">
-                <img src="/intro-to-html/112.jpg" frameborder="0" allowfullscreen></img>
+                <img src="../static/css/image/KakaoTalk_20221007_222113499.jpg" frameborder="0" allowfullscreen></img>
             </div>
         </div>
     </div>      
