--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/totals.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/total.css' %}" />
   </head>
   <body id="wrap">
     <section class="header">
