--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+{% extends "reference.html" %} {% block search %} {% include "partials/home_search.html" %} {% endblock %}
+
+{% comment %} <!DOCTYPE html>
 <html>
     <head>
         <title>메뉴로 찾기</title>
@@ -87,4 +89,4 @@
             </div>
         </section>
     </body>
-</html>
+</html> {% endcomment %}
