--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -23,7 +23,8 @@
         <a href="/index/" class="createaccount">회원가입</a>
       </div>
     </section>
-    {% block search %} {% endblock %} {% block activate %} {% endblock %} {% block login %} {% endblock %}
+    {% block search %} {% endblock %} {% block activate %} {% endblock %} {% block login %} {% endblock %} {% comment %}
+    이거 왜이래래 {% endcomment %} {% block choose %} {% endblock %}
     <div class="footer">
       <div class="footer-upper-box">
         <div class="box">김혜원</div>
