--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -24,7 +24,7 @@
       </div>
     </section>
     {% block search %} {% endblock %} {% block activate %} {% endblock %} {% block login %} {% endblock %} {% comment %}
-    이거 왜이래래 {% endcomment %} {% block choose %} {% endblock %}
+    이거 왜이래래 {% endcomment %} {% block choose %} {% endblock %} {%block script%} {%endblock%}
     <div class="footer">
       <div class="footer-upper-box">
         <div class="box">김혜원</div>
